--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "@reggi/help",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "author": "Thomas Reggi",
   "main": "./index.build.js",
   "scripts": {
     "babel": "babel ./index.js --out-file ./index.build.js",
     "babel:watch": "npm run babel -- --watch",
+    "build": "npm run babel",
+    "jest": "jest",
+    "jest:coverage": "jest --coverage",
     "standard": "standard",
-    "test": "jest --coverage",
-    "test:result": "npm run test --silent &>/dev/null || echo $?"
+    "test": "npm run standard && npm run jest"
   },
   "babel": {
     "plugins": [
@@ -36,9 +38,17 @@
       }
     }
   },
+  "dependencies": {
+    "@reggi/help.parse-argv": "0.0.2",
+    "@reggi/journey": "1.0.0",
+    "babel-runtime": "^6.26.0",
+    "lodash": "^4.17.5"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "jest": "^22.4.2",
     "standard": "^11.0.0"
@@ -47,19 +57,19 @@
     "access": "public"
   },
   "standard": {
+    "parser": "babel-eslint",
     "ignore": [
       "*.build.js"
     ],
     "globals": [
+      "beforeAll",
+      "afterAll",
       "expect",
       "test",
       "beforeEach",
-      "afterEach"
+      "afterEach",
+      "it",
+      "jest"
     ]
-  },
-  "dependencies": {
-    "@reggi/help.parse-argv": "0.0.2",
-    "@reggi/journey": "1.0.0",
-    "lodash": "^4.17.5"
   }
 }
